When dumping the done list in ohci_softintr / OHCI_DEBUG use the correct list next pointer.

PR/33450 and part of PR/35379.